ProdIND/ProdPrograms/force-app/main/default/objects/Stamp_Detail__c/Stamp_Detail__c.object-meta.xml
<CustomObject>
    <label>Stamp Detail</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Stamp  Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stamp Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>