ProdIND/ProdPrograms/force-app/main/default/objects/Stamp_Detail__c/fields/Loan_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Loan_Agreement__c</fullName>
    <label>Loan Agreement</label>
    <referenceTo>Loan_Agreement__c</referenceTo>
    <relationshipLabel>Stamp Details</relationshipLabel>
    <relationshipName>Stamp_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>