ProdIND/ProdPrograms/force-app/main/default/objects/Stamp_Detail__c/fields/Stamp_Date__c.field-meta.xml
<CustomField>
    <fullName>Stamp_Date__c</fullName>
    <label>Stamp Date</label>
    <type>Date</type>
</CustomField>