ProdIND/ProdPrograms/force-app/main/default/objects/Stamp_Detail__c/fields/Stamp_For__c.field-meta.xml
<CustomField>
    <fullName>Stamp_For__c</fullName>
    <label>Stamp For</label>
    <length>50</length>
    <type>Text</type>
</CustomField>