ProdIND/ProdPrograms/force-app/main/default/objects/Stamp_Detail__c/fields/Stamp_Location_Type__c.field-meta.xml
<CustomField>
    <fullName>Stamp_Location_Type__c</fullName>
    <label>Stamp Location Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>