ProdIND/ProdPrograms/force-app/main/default/objects/Stamp_Detail__c/fields/Stamp_Printed_Location_Blcode__c.field-meta.xml
<CustomField>
    <fullName>Stamp_Printed_Location_Blcode__c</fullName>
    <label>Stamp Printed Location Blcode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>