ProdIND/ProdPrograms/force-app/main/default/objects/Stamp_Detail__c/fields/Stamp_Printed_Location_BlName__c.field-meta.xml
<CustomField>
    <fullName>Stamp_Printed_Location_BlName__c</fullName>
    <label>Stamp Printed Location BlName</label>
    <length>20</length>
    <type>Text</type>
</CustomField>