ProdIND/ProdPrograms/force-app/main/default/objects/Stamp_Detail__c/fields/Stamp_S_No__c.field-meta.xml
<CustomField>
    <fullName>Stamp_S_No__c</fullName>
    <label>Stamp S No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>