ProdIND/ProdPrograms/force-app/main/default/objects/Stamp_Detail__c/fields/Stamp_Towards__c.field-meta.xml
<CustomField>
    <fullName>Stamp_Towards__c</fullName>
    <label>Stamp Towards</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AGREEMENT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>