ProdIND/ProdPrograms/force-app/main/default/objects/Stamp_Detail__c/fields/Stamp_Type__c.field-meta.xml
<CustomField>
    <fullName>Stamp_Type__c</fullName>
    <label>Stamp Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>