ProdIND/ProdPrograms/force-app/main/default/objects/Stamp_Detail__c/fields/Stamp_Value__c.field-meta.xml
<CustomField>
    <fullName>Stamp_Value__c</fullName>
    <label>Stamp Value</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>