ProdIND/ProdPrograms/force-app/main/default/objects/Stamp_Detail__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Loan Agreement</fullName>
            </value>
            <value>
                <fullName>POA</fullName>
            </value>
            <value>
                <fullName>Additional LA</fullName>
            </value>
            <value>
                <fullName>Additional POA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>